[package]
name = "sen"
version = "0.1.0"
authors = ["arctan95 <jaeqentan@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"